# engine

./: .gitignore  CMakeLists.txt  INSTALL_GUIDE.md  PROJECT_STRUCTURE.md  README.md  build.bat  build.sh  build_smart.bat  check_dependencies.bat
Engine2D/: CMakeLists.txt
Engine2D/include/Engine2D/: Engine2D.h
Engine2D/include/Engine2D/Audio/: Sound.h
Engine2D/include/Engine2D/Core/: Component.h  Engine.h  GameObject.h
Engine2D/include/Engine2D/Graphics/: Camera.h
Engine2D/include/Engine2D/Input/: InputManager.h
Engine2D/include/Engine2D/Physics/: Rigidbody.h
Engine2D/include/Engine2D/Utils/: Config.h  Exception.h  Logger.h  Profiler.h  ResourceManager.h  SmartPtr.h
Engine2D/src/Core/: Component.cpp  Engine.cpp  GameObject.cpp  Transform.cpp
Engine2D/src/Utils/: Logger.cpp  Timer.cpp
Examples/: CMakeLists.txt
Examples/FallingBlocks/: main.cpp
Examples/InputTest/: main.cpp
Examples/SimpleGame/: main.cpp
Examples/SimpleGame/Engine2D/: CMakeLists.txt
Examples/SimpleGame/Engine2D/include/Engine2D/: Engine2D.h
Examples/SimpleGame/Engine2D/include/Engine2D/Audio/: AudioManager.h
Examples/SimpleGame/Engine2D/include/Engine2D/Core/: Scene.h  SceneManager.h  Transform.h
Examples/SimpleGame/Engine2D/include/Engine2D/Graphics/: Renderer.h  Sprite.h
Examples/SimpleGame/Engine2D/include/Engine2D/Physics/: Collider.h  PhysicsWorld.h
Examples/SimpleGame/Engine2D/include/Engine2D/Utils/: Timer.h
Tests/: CMakeLists.txt
